Fixing Highscore table <th> alignment

--- a/css/app.css
+++ b/css/app.css
@@ -421,6 +421,7 @@ th {
 	font-family: 'Poor Story', cursive;
 	font-weight: 900;
 	font-size: 1.1em;
+	text-align: center;
 }
 
 
